# monorepo-starter-old-1

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .lintstagedrc.js  .prettierrc.js  .stylelintrc.js  README.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: postCreateCommand.sh
.devcontainer/scripts/util/: install_fonts.sh  install_go_dependencies.sh
.nx/cache/: file-map.json  lockfile.hash  parsed-lock-file.json
