[tool.poetry]
name        = "monorepo-starter"
description = "monorepo-starter"
keywords    = ["monorepo", "starter"]
version     = "0.0.0"
readme      = "README.md"
authors     = ["Sebastian Berg <sebastian.berg@handarel.dev>"]

[tool.poetry.dependencies]
python  = "~3.12"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff         = "^0.1.6"
ansible      = "^9.0.1"
ansible-lint = { version = "^6.22.0", markers = "platform_system != 'Windows'" }
pipreqs      = "^0.4.13"
pyinstaller  = "^6.2.0"

[tool.ruff]
target-version = "py312"
line-length    = 100
indent-width   = 4

[tool.ruff.format]
line-ending               = "auto"
quote-style               = "single"
indent-style              = "space"
skip-magic-trailing-comma = false


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
